--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,16 +1,54 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+/*
     body{
         background: #BDBDBD;
     }
-    
+
     You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
+
+
+    ...Or you can use the import command to include
     other sylesheets into your bunde as well, e.j:
-    
+
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+  background: green;
+}
+.card {
+  text-align: center;
+  font-size: 70px;
+  width: 300px;
+  height: 450px;
+  background: white;
+  margin: 0 auto;
+  margin-top: 20%;
+  padding: 20px;
+  padding-top: 180px;
+  border: 1px black;
+  border-radius: 8px;
+  position: relative;
+}
+.number {
+  font-size: 40px;
+}
+.top-suit {
+  font-size: 80px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.bottom-suit {
+  font-size: 80px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  transform: rotate(-180deg);
+}
+
+.red {
+  color: red;
+}
